examples/datalog/20_applications/06_bom_cost_rollup.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_bom_cost
Knowledge graph 'test_bom_cost' created.
Switched to knowledge graph: test_bom_cost
> .kg use test_bom_cost
Switched to knowledge graph: test_bom_cost
> +part_of[(10, 1, 2), (20, 1, 3), (30, 10, 4), (40, 10, 1), (50, 20, 2)].
Inserted 5 fact(s) into 'part_of'.
> +base_cost[(30, 5), (40, 20), (50, 15)].
Inserted 3 fact(s) into 'base_cost'.
> +leaf_contribution(Assembly, Part, Cost*Qty) :- part_of(Part, Assembly, Qty), base_cost(Part, Cost).
Script error: Parse error: Invalid term: 'Cost*Qty'
